test/tasty/pos/src-3/tastytest/FromJavaObjectConsume.scala
package tastytest

object FromJavaObjectConsume {

  @basicAnnot(FromJavaObjectBox.id(23))
  class Foo

}
