test/tasty/neg/src-3/ExperimentalObj.scala
package tastytest

import scala.annotation.experimental

@experimental
object ExperimentalObj {
  def foo = 23
}
